[Story 1.6] Fix Docker containers and complete working setup
- Fix backend server startup by adding proper Hono server listener
- Update Hono from v3 to v4 and add @hono/node-server dependency
- Fix docker-compose.yml volume mounts to preserve workspace structure
- Update yarn.lock with new dependencies
- Add .mcp*.json to .gitignore for security
- Both frontend and backend now fully operational in Docker containers
- Tested: Frontend on port 3000, Backend API on port 8787

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,14 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app/frontend
+      - ./package.json:/app/package.json
+      - ./yarn.lock:/app/yarn.lock
+      - ./.yarnrc.yml:/app/.yarnrc.yml
+      - ./.yarn:/app/.yarn
       - /app/node_modules
-      - /app/.next
+      - /app/frontend/node_modules
+      - /app/frontend/.next
     environment:
       - NODE_ENV=development
     depends_on:
@@ -24,9 +29,14 @@ services:
     ports:
       - "8787:8787"
     volumes:
-      - ./backend:/app
+      - ./backend:/app/backend
+      - ./package.json:/app/package.json
+      - ./yarn.lock:/app/yarn.lock
+      - ./.yarnrc.yml:/app/.yarnrc.yml
+      - ./.yarn:/app/.yarn
       - /app/node_modules
-      - /app/dist
+      - /app/backend/node_modules
+      - /app/backend/dist
     environment:
       - NODE_ENV=development
     networks:
