--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hono/node-server": "^1.8.0",
     "dotenv": "^17.2.0",
-    "hono": "^3.0.0"
+    "hono": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -29,5 +30,5 @@
     "typescript": "^5.0.0",
     "vitest": "^1.0.0"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@4.0.2"
 }
